src/objects/loan__Transaction__c.object
<CustomObject>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Document_Number__c</fullName>
        <description>Document Number</description>
        <externalId>true</externalId>
        <inlineHelpText>Document Number</inlineHelpText>
        <label>Voucher Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>loan__Group__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Id__c</fullName>
        <label>Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__JV_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JV Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>loan__Journal__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Posted</description>
        <inlineHelpText>Posted</inlineHelpText>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <description>Transaction Date</description>
        <inlineHelpText>Transaction Date</inlineHelpText>
        <label>Transaction Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Header_Writeable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Transaction Header Writeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Source</label>
        <referenceTo>loan__Transaction_Source__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction</label>
    <nameField>
        <displayFormat>ATI-{0000000000}</displayFormat>
        <label>Accounting Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Journal_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(loan__Journal__c)</errorConditionFormula>
        <errorDisplayField>loan__Journal__c</errorDisplayField>
        <errorMessage>You must select a Journal</errorMessage>
    </validationRules>
</CustomObject>